--- a/src/static/web/stylus/blocks/s1.styl
+++ b/src/static/web/stylus/blocks/s1.styl
@@ -1,6 +1,6 @@
 .b1
 	position relative
-	height calc(100vh - 100px)
+	height calc(100vh - 70px)
 	&.pageEventoDetalle
 		height 440px
 	.grilla
@@ -125,7 +125,12 @@
 @media screen and (max-width 480px)
 	.b1
 		min-height 650px
-		height calc(100vh - 80px)
+		height calc(100vh - 60px)
 	.b1
 		.grilla
 			align-items flex-end
+	.b1DateItem
+		margin-bottom 30px
+	.b1Info .clickVideo
+		margin 0
+		margin-top 100px
