--- a/src/static/web/stylus/blocks/s11.styl
+++ b/src/static/web/stylus/blocks/s11.styl
@@ -67,7 +67,7 @@
     .gParrafo
         margin-top 16px
         font-size 24px
-        textg(t-600,normal,#262626)
+        textg(t-600,normal,#26262ps4.6)
 
 .b11LeftContent
     position relative
