--- a/src/templates/landing/common/_base.html
+++ b/src/templates/landing/common/_base.html
@@ -46,7 +46,7 @@
             $("form").validationEngine('attach', {
                 promptPosition : "topLeft",
                 autoHidePrompt: true,
-                autoHideDelay: 3000000,
+                autoHideDelay: 2000,
                 binded: false,
                 scroll: false,
                 validateNonVisibleFields: true
