--- a/src/static/web/stylus/blocks/s19.styl
+++ b/src/static/web/stylus/blocks/s19.styl
@@ -1,6 +1,67 @@
-// @media screen and (max-width 1440px)
-// @media screen and (max-width 1366px)
-// @media screen and (max-width 1280px)
-// @media screen and (max-width 1024px)
-// @media screen and (max-width 768px)
-// @media screen and (max-width 480px)
+.b19
+    margin 96px 0px
+    .fc-col-header-cell-cushion
+        text-transform uppercase
+    .fc-daygrid-event-harness
+        cursor pointer
+
+.b19Popup
+    centerXY()
+    position fixed
+    z-index 200
+    background #fff
+    padding 24px
+    border-radius 20px
+    max-width 545px
+    width 100%
+    box-shadow 0px 0px 10px 2px rgba(#000,0.2)
+    opacity0()
+    &.active
+        animation animatePopup 0.3s ease
+        opacity1()
+    .hours
+        margin-bottom 24px
+        font-size 16px
+        textg(t-500,normal,#262626)
+        img
+            margin-right 10px
+    h3
+        font-size 28px
+        textg(t-600,normal,#262626)
+        margin-bottom 16px
+    .gParrafo
+        font-size 28px
+        textg(t-400,normal,#262626)
+        margin-bottom 16px
+    .b4Envivo
+        position relative
+        left 0
+        top 0
+
+.b19ClosePopup
+    position absolute
+    top 20px
+    right 20px
+    font-size 30px
+    color #000
+
+.b19Name
+    margin-bottom 24px
+    img
+        margin-right 10px
+    p
+        font-size 14px
+        textg(t-500,normal,#262626)
+        margin-right 10px
+        margin-bottom 0%
+    span
+        font-size 12px
+        textg(t-400,normal,#404040)
+
+@keyframes animatePopup
+	0%
+		transform translateY(-50%) scale(0.95)
+	50%
+		transform translateY(-50%) scale(1.05)
+	100%
+		transform translateY(-50%) scale(1)
