--- a/src/static/web/stylus/blocks/s20.styl
+++ b/src/static/web/stylus/blocks/s20.styl
@@ -1,6 +1,21 @@
-// @media screen and (max-width 1440px)
-// @media screen and (max-width 1366px)
-// @media screen and (max-width 1280px)
-// @media screen and (max-width 1024px)
-// @media screen and (max-width 768px)
-// @media screen and (max-width 480px)
+.b20
+    scrollbar(#808080,#dbdbdb,4,3)
+    margin 96px 0px
+    margin-top 30px
+    .b4Select
+        width fit-content
+    .b4ClickSelect
+        padding-right 40px
+    .clickVideo
+        &:after
+            display none
+.b20Top
+    margin 35px 0px
+    position relative
+    z-index 50
+
+@media screen and (max-width 480px)
+    .b20Top
+        align-items flex-start
+        .gTitle
+            margin-bottom 20px
