--- a/src/static/web/stylus/blocks/z-header.styl
+++ b/src/static/web/stylus/blocks/z-header.styl
@@ -52,7 +52,7 @@
 	top 0
 	right 20px
 	flexg(center,center)
-	display none
+	display 	
 	font-size 30px
 	
 .sidebarContentMobile
@@ -67,7 +67,7 @@
 	transition all 400ms ease
 
 .header
-	height 100px
+	height 70px
 	.grilla
 		height 100%
 	&.sessionOn
@@ -77,7 +77,16 @@
 		.headerOptionLogin
 			display none
 
-
+.headerEventos
+	position relative
+	margin-right 20px
+	span
+		circle(20,#000)
+		position absolute
+		top -13px
+		right -13px
+		font-size 12px
+		textg(t-400,normal,#fff)
 
 .headerLeft,
 .headerRight
@@ -87,6 +96,12 @@
 	a
 		height 100%
 		flexg(center,center)
+		figure
+			height 100%
+			flexg(center,center)
+			img
+				height 90%
+				width auto
 
 .headerAnclas
 	height 100%
@@ -178,7 +193,7 @@
 
 .headerMenu
 	height 100%
-	display none
+	display flex
 
 .headerOptionLogin
 	cursor pointer
@@ -260,7 +275,7 @@
 	.headerLeft
 		width 120px
 	.header
-		height 80px
+		height 60px
 	.headerMenu
 		display flex
 @media screen and (max-width 480px)
