--- a/src/static/web/stylus/blocks/s-g8.styl
+++ b/src/static/web/stylus/blocks/s-g8.styl
@@ -301,10 +301,13 @@
 		margin-top 40px
 	.g8PopupForm
 		padding 30px 40px
-
-@media screen and (max-width: 1280px)
+	.g8PopupForm h3
+		margin-bottom 10px
 	.g8Input
 		height 44px
+		margin-bottom 5px
+	.g8PopupForm.formRegistro .g8Confirm p
+		margin 10px
 
 @media screen and (max-width: 768px)
 	.g8PopupForm
