--- a/src/static/web/stylus/blocks/s16.styl
+++ b/src/static/web/stylus/blocks/s16.styl
@@ -2,6 +2,8 @@
     margin 96px 0px
     .gParrafo
         color #404040
+    .gTitle
+        margin-bottom 10px
     .grilla
         padding 60px 80px
         background #EFEFF3
