--- a/src/static/web/stylus/blocks/s21.styl
+++ b/src/static/web/stylus/blocks/s21.styl
@@ -1,6 +1,22 @@
-// @media screen and (max-width 1440px)
-// @media screen and (max-width 1366px)
-// @media screen and (max-width 1280px)
-// @media screen and (max-width 1024px)
-// @media screen and (max-width 768px)
-// @media screen and (max-width 480px)
+.b21
+    margin 96px 0px
+    .gTitle
+        margin-bottom 60px
+    .b5Item
+        margin-bottom 0px
+    .b5Text
+        .gParrafo
+            color #000
+
+.b21Wrap
+    grid-gap 40px 30px
+
+@media screen and (max-width 1024px)
+    .b21
+        margin 70px 0px
+        .gTitle
+            margin-bottom 40px
+
+@media screen and (max-width 1024px)
+    .b21
+        margin 45px 0px
