--- a/src/templates/landing/olvido-contrasena.html
+++ b/src/templates/landing/olvido-contrasena.html
@@ -1,4 +1,4 @@
-{% extends "common/_base.html" %}
+{% extends "landing/common/_base.html" %}
 
 {% block cssadicional %}
 
@@ -13,15 +13,22 @@
         <div class="b2Info">
             <h1 class="gTitle scrollItem">Olvidé mi contraseña</h1>
             <div class="gParrafo scrollItem">
+                {% if messages %}
+                {% for message in messages %}
+                    <p>{{message}}</p>
+                {% endfor %}
+                {% else %}
                 <p>Ingresa el email que tienes asociado a tu cuenta. Te enviaremos un correo de confirmación.</p>
+                {% endif %}
             </div>
-            <form action="" class="g8Form scrollItem">
+            <form action="" class="g8Form scrollItem" method="POST">
+                {% csrf_token %}
                 <div class="g8Input">
 					<span>Email</span>
-					<input type="text" class="g8Box validate[required,custom[email]]">
+					<input type="text" class="g8Box validate[required,custom[email]]" name="{{form.email.html_name}}">
 				</div>
-                <button>Enviar</button>
-                <a href="#" class="g8LinkForm">Cancelar</a>
+                <button type="submit">Enviar</button>
+                <a href="{% url 'landing:home' %}" class="g8LinkForm">Cancelar</a>
             </form>
         </div>
     </div>
