Added organization field

--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -257,7 +257,7 @@
                                                 data-img="{{exhibitor.image.url}}"
                                                 >
                                                 <h6><img src="{{STATIC_URL}}img/expositor.png" alt="" width="16">{{exhibitor.name}}</h6>
-                                                <span> - {{exhibitor.title}}</span>
+                                                <span> - {{exhibitor.organization}}</span>
                                             </a>
                                         </li>
                                     {% endfor %}
