--- a/src/templates/landing/home.html
+++ b/src/templates/landing/home.html
@@ -304,7 +304,7 @@
                 <a  href="#" class="b4OpenPopupPerson b5Item swiper-slide zoomImageHover"
                     data-name="{{ex.name}}"
                     data-cargo="{{ex.title}}"
-                    data-info="{{ex.desccription}}"
+                    data-info="{{ex.description}}"
                     data-url="{{ex.link}}"
                     data-img="{{ex.image.url}}">
                     <div class="b5Img">
