Show organization on list

--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -319,7 +319,7 @@
                     </div>
                     <div class="b5Text">
                         <div class="gParrafo">
-                            <p>{{ex.name}}</p>
+                            <p>{{ex.name}} - {{ex.organization}}</p>
                         </div>
                     </div>
                 </a>
