--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -225,20 +225,20 @@
                                 {% endif %}
                                 <div class="b4Info">
                                     <!-- Existe dos opcions de "Ver en vivo o Volver a ver" -->
-                                    <!-- <a href="#" class="b4Envivo">En vivo <img src="{{STATIC_URL}}img/live.svg" alt=""></a> -->
+                                    <!-- <a href="#" class="b4Envivo">En vivo <img src="/static/web/img/live.svg" alt=""></a> -->
                                     <!-- <a href="#" class="b4VolverVer a ver clickVideo popup" data-urlvideo="https://www.youtube.com/watch?v=l6_nRqIz_9o">Volver a ver</a> -->
                                     {% if schedule.get_current_status == 'upcoming' %}
                                         <a href="#" class="b4Agendar agregarCalendario" data-item-id="1"><span>Agendar</span></a>
                                     {% endif %}
                                     {% if schedule.get_current_status == 'is_live' %}
-                                        <a href="#" class="b4Envivo">En vivo <img src="{{STATIC_URL}}img/live.svg" alt=""></a>
+                                        <a href="#" class="b4Envivo">En vivo <img src="/static/web/img/live.svg" alt=""></a>
                                     {% endif %}
                                     {% if schedule.get_current_status == 'past' and schedule.video_url %}
                                         <a href="#" class="b4VolverVer a ver clickVideo popup" data-urlvideo="{{schedule.video_url}}">Volver a ver</a>
                                     {% endif %}
-                                    <p class="sala"><img src="{{STATIC_URL}}img/icon-calendar.svg" alt="" width="13"> Sala 1</p>
-                                    <p class="fecha"><img src="{{STATIC_URL}}img/icon-calendar.svg" alt="" width="13">{{schedule.get_date}}</p>
-                                    <p class="hora"><img src="{{STATIC_URL}}img/icon-hour.svg" alt="" width="13"> {{schedule.start_time}} - {{schedule.end_time}}</p>
+                                    <p class="sala"><img src="/static/web/img/icon-calendar.svg" alt="" width="13"> Sala 1</p>
+                                    <p class="fecha"><img src="/static/web/img/icon-calendar.svg" alt="" width="13">{{schedule.get_date}}</p>
+                                    <p class="hora"><img src="/static/web/img/icon-hour.svg" alt="" width="13"> {{schedule.start_time}} - {{schedule.end_time}}</p>
                                     <h4>{{schedule.name}}</h4>
                                     <div class="gParrafo">
                                         <p>{{schedule.description}}</p>
@@ -256,7 +256,7 @@
                                                 data-url="{{exhibitor.link}}"
                                                 data-img="{{exhibitor.image.url}}"
                                                 >
-                                                <h6><img src="{{STATIC_URL}}img/expositor.png" alt="" width="16">{{exhibitor.name}}</h6>
+                                                <h6><img src="/static/web/img/expositor.png" alt="" width="16">{{exhibitor.name}}</h6>
                                                 <span> - {{exhibitor.organization}}</span>
                                             </a>
                                         </li>
