--- a/src/templates/landing/evento-detalle.html
+++ b/src/templates/landing/evento-detalle.html
@@ -37,7 +37,7 @@
             <div class="b1Date f aifs jcfs scrollItem">
                 <div class="b1DateItem f aifs jcfs">
                     <img src="/static/web/img/calendario.svg" alt="" width="20">
-                <h4>{{home_page.date_description}}<span>{{home_page.time_description}}</span></h4>
+                <h4>{{home_page.date_description|default:""}}<span>{{home_page.time_description|default:""}}</span></h4>
                 </div>
                 {% if not company.in_person %}
                     <div class="b1DateItem f aifs jcfs">
