filters and messages

--- a/src/static/web/stylus/blocks/s4.styl
+++ b/src/static/web/stylus/blocks/s4.styl
@@ -60,6 +60,11 @@
             display none
         .b4WrapList
             width 100%
+        .b4Envivo,
+        .b4VolverVer,
+        .b4Agendar
+            right 20px !important
+            
 .b4FilterLeft
     width 250px
     background #EFEFF3
@@ -189,6 +194,7 @@
     .gParrafo
         font-size 14px
         line-height 1.2
+
 
 .b4Envivo,
 .b4VolverVer,
@@ -586,3 +592,8 @@
         height 200px
     .b4PopupImage
         display none
+    .b4ClickSelect
+        padding 0px 10px
+        padding-right 20px
+        &:after
+            right 5px
