--- a/src/static/web/stylus/blocks/z-header.styl
+++ b/src/static/web/stylus/blocks/z-header.styl
@@ -278,6 +278,8 @@
 		height 60px
 	.headerMenu
 		display flex
+	.headerLeft
+		width auto
 @media screen and (max-width 480px)
 	.headerButtonRegistrate
 		padding 0px 15px
